Core: Fixed warnings after merge of brach replay.